Fix spacing and fonts

--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -1,7 +1,28 @@
-#contactInfo {
-	font-family: 'Bree Serif', verdana, arial, helvetica, sans-serif;
-	color: #000000;
+#contactContainer {
+	margin: 10% auto;
+	background-color: #FFFFFF;
+	height: 214px;
+	width: 488px;
+  	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	border-radius: 10px;
+	display: flex;
+	flex-direction: column;
+	align-content: flex-start;
+	padding: 21px 40px;
+}
+
+.contactHeader {
+	font-family: 'Rubik', verdana, arial, helvetica, sans-serif;
+	color: #4DA761;
 	font-weight: bold;
 	font-size: 30pt;
-	padding: 1px;
+	margin: 0px;
+}
+
+.contactInfo {
+	font-family: 'Open Sans', verdana, arial, helvetica, sans-serif;
+	color: #000000;
+	font-weight: bold;
+	font-size: 18pt;
+	padding: 5px;
 }
